# engine

./: .gitattributes  LICENSE  Makefile  README.md  go.mod  go.sum
animation/: animation.go  channel.go  logger.go
app/: app-browser.go  app-desktop.go  app.go  app_browser_wasm.go  doc.go  logger.go
audio/: .gitattributes  audio_file.go  doc.go  listener-browser.go  listener-desktop.go  listener.go  player.go  wave.go
audio/windows/openal-soft-1.18.2/native-tools/: CMakeLists.txt
audio/windows/openal-soft-1.18.2/utils/alsoft-config/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
camera/: camera.go  first_person_control.go  fly_camera.go  fly_control.go  logger.go  orbit_control.go  orthographic.go  perspective.go
core/: RenderInfo.go  dispatcher.go  doc.go  logger.go  node.go  raycaster.go  timer.go
geometry/: box.go  circle.go  cone-cylinder.go  cylinder.go  disk.go  doc.go  geometry.go  logger.go  morph.go  plane.go  sphere.go  torus.go  tube.go
gls/: build.go  consts.go  doc.go  gen.go  glapi.c  glapi.h  glcorearb.h  gls-browser.go  gls-desktop.go  gls-wasm.go  gls.go  logger.go  program.go  shaderdefines.go  uniform.go  vbo.go
graphic/: axis_helper.go  doc.go  graphic.go  grid_helper.go  line_strip.go  lines.go  logger.go  mesh.go  normals_helper.go  points.go  rigged_mesh.go  skeleton.go  skybox.go  sprite.go
gui/: align.go  builder.go  builder_layout.go  builder_panel.go  button.go  button_destructive.go  chart.go  checkradio.go  clipper.go  control_folder.go  doc.go  docklayout.go  dropdown.go  edit.go  events.go  filllayout.go  folder.go  gridlayout.go  hboxlayout.go  ilayout.go  image.go  image_button.go  imagelabel.go  itemscroller.go  label.go  list.go  logger.go  manager.go  menu.go  panel.go  root.go  scrollbar.go  scroller.go  slider.go  splitter.go  style.go  style_dark.go  style_default.go  style_light.go  tabbar.go  (+6 more)
hellog3n/: main.go
light/: ambient.go  directional.go  doc.go  ilight.go  logger.go  point.go  spot.go
material/: basic.go  logger.go  material.go  pbr.txt  pbr_mr.go  phong.go  physical.go  point.go  screenspaceline.go  standard.go
math32/: array.go  box2.go  box3.go  color.go  color4.go  curves.go  frustum.go  line3.go  math.go  matrix3.go  matrix4.go  matrix4_test.go  plane.go  quaternion.go  ray.go  sphere.go  spline.go  triangle.go  vector2.go  vector3.go  vector4.go
physics/: body.go  broadphase.go  collision.go  debug.go  doc.go  forcefield.go  material.go  narrowphase.go  particle.go  rigidbody.go  simulation.go
renderer/: doc.go  logger.go  postprocessor.go  renderer.go  shaman.go  version-browser.go  version-desktop.go  version.go  version_browser_wasm.go
text/: atlas.go  doc.go  font.go  str.go
texture/: animator.go  board.go  doc.go  logger.go  (+1 more)
(+321 files in other folders)
